chore: Add HTML and CSS code to generate a grid-based  layout with styles making use of the flexbox layout
 - create and add photographs for requiring elements
 - create readme.md file
 - format the source code in respect to Udacity HTML/CSS Style Guide

--- a/index.html
+++ b/index.html
@@ -3,40 +3,77 @@
 
 <head>
   <meta charset="utf-8">
+  <title>My portfolio</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto|Work+Sans:100|BenchNine:100" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 
 <body>
-<div class="wrapper">
-    <div class="header">
+  <div class="header">
+    <a href="https://eu.udacity.com/" target="blank">
+      <img class="logo" src="images/logo.png" alt="Udacity logo">
+    </a>
+    <div>
       <h1>Cristinel Ilisei</h1>
-      <h3>Front End ninja</h3>
+      <h3>Front-End Ninja</h3>
     </div>
-    <div class="container">
-      <div class="sidebar">
-        <p>
-          <strong>Sidebar</strong>
-        </p>
-        <ul>
-          <li>color a</li>
-          <li>color b</li>
-          <li>color c</li>
-        </ul>
+
+  </div>
+  <main>
+    <div class="sidebar">
+      <ul>
+        <li>
+          <div class="c-1 color-item"></div>
+          <h4>blue</h4>
+        </li>
+        <li>
+          <div class="c-2 color-item"></div>
+          <h4>dark</h4>
+        </li>
+        <li>
+          <div class="c-3 color-item"></div>
+          <h4>gray</h4>
+        </li>
+      </ul>
+    </div>
+    <div class="content">
+      <div class="main-content">
+        <img src="images/front-end-ninja.jpg" alt="front-end ninja at work" style="height: 100%; width: 100%; object-fit: cover">
+        <h6>source: www.pexels.com</h6>
       </div>
-      <div class="content">
-        <div class="main-content">
-          <p>Main content.</p>
+      <div class="featured-work">
+        <h2>Featured Work</h2>
+
+        <div class="site-item">
+          <a href="#" target="blank">
+            <img src="images/TheBrightonTimes.jpg" alt="The Brighton Times project">
+          </a>
+          <h2>THE BRIGHTON TIMES</h2>
+          <a href="https://github.com/cixs/The-Brighton-Times" target="blank">https://github.com/cixs/The-Brighton-Times</a>
         </div>
-        <div class="featured-work">
-          <p>Featured work</p>
+        <div class="site-item">
+          <a href="#" target="blank">
+            <img src="images/PixelArtMaker.jpg" alt="Lab:Pixel Art maker project">
+          </a>
+          <h2>PIXEL ART MAKER</h2>
+          <a href="https://github.com/cixs/Pixel-Art-Maker" target="blank">https://github.com/cixs/Pixel-Art-Maker</a>
         </div>
+
+        <div class="site-item">
+          <a href="#">
+            <img src="images/MyPortfolio.jpg" alt="My Portofolio project">
+          </a>
+          <h2>MY PORTFOLIO</h2>
+          <a href="https://github.com/cixs/My-Portfolio" target="blank">https://github.com/cixs/My-Portfolio </a>
+        </div>
+
       </div>
     </div>
-  </div>
-  <div class="footer">
-    <p>Footer</p>
-  </div>
+    <footer>
+      <a href="https://cixs.000webhostapp.com/" target="blank">Live demo</a>
+    </footer>
+  </main>
 </body>
 
 </html>
