--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>My portfolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat%7CRoboto%7CWork+Sans:100%7CBenchNine:100" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto|Work+Sans:100|BenchNine:100" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
 
@@ -22,20 +23,19 @@
   </div>
   <main>
     <div class="sidebar">
-      <ul>
-        <li>
-          <div class="c-1 color-item"></div>
-          <h4>blue</h4>
-        </li>
-        <li>
-          <div class="c-2 color-item"></div>
-          <h4>dark</h4>
-        </li>
-        <li>
-          <div class="c-3 color-item"></div>
-          <h4>gray</h4>
-        </li>
-      </ul>
+      <div class="color-wrapper">
+        <div id="color-1" class="color-item"></div>
+        <div class="color-text">blue</div>
+      </div>
+      <div class="color-wrapper">
+        <div id="color-2" class="color-item"></div>
+        <div class="color-text">dark</div>
+      </div>
+      <div class="color-wrapper">
+        <div id="color-3" class="color-item"></div>
+        <div class="color-text">gray</div>
+      </div>
+
     </div>
     <div class="content">
       <div class="main-content">
@@ -50,14 +50,18 @@
             <img src="images/TheBrightonTimes.jpg" alt="The Brighton Times project">
           </a>
           <h2>THE BRIGHTON TIMES</h2>
-          <a href="https://github.com/cixs/The-Brighton-Times" target="blank">https://github.com/cixs/The-Brighton-Times</a>
+          <h6>
+            <a href="https://github.com/cixs/The-Brighton-Times" target="blank">https://github.com/cixs/The-Brighton-Times</a>
+          </h6>
         </div>
         <div class="site-item">
           <a href="#" target="blank">
             <img src="images/PixelArtMaker.jpg" alt="Lab:Pixel Art maker project">
           </a>
           <h2>PIXEL ART MAKER</h2>
-          <a href="https://github.com/cixs/Pixel-Art-Maker" target="blank">https://github.com/cixs/Pixel-Art-Maker</a>
+          <h6>
+            <a href="https://github.com/cixs/Pixel-Art-Maker" target="blank">https://github.com/cixs/Pixel-Art-Maker</a>
+          </h6>
         </div>
 
         <div class="site-item">
@@ -65,15 +69,18 @@
             <img src="images/MyPortfolio.jpg" alt="My Portofolio project">
           </a>
           <h2>MY PORTFOLIO</h2>
-          <a href="https://github.com/cixs/My-Portfolio" target="blank">https://github.com/cixs/My-Portfolio </a>
+          <h6>
+            <a href="https://github.com/cixs/My-Portfolio" target="blank">https://github.com/cixs/My-Portfolio </a>
+          </h6>
         </div>
 
       </div>
     </div>
     <footer>
-      <a href="https://cixs.000webhostapp.com/" target="blank">Live demo</a>
+      <p>Project developed as a part of Udacity's <strong>Front-End Web Developer Nanodegree Program</strong>.</p>
     </footer>
   </main>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
