fix: remove a CSS atributte in index.html in order to respect all requirements of the project
also:
- reworked and replaced the logo.png
- modify some fonts sizes to fits better on different screen sizes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="content">
       <div class="main-content">
-        <img src="images/front-end-ninja.jpg" alt="front-end ninja at work" style="height: 100%; width: 100%; object-fit: cover">
+        <img src="images/front-end-ninja.jpg" alt="front-end ninja at work">
         <h6>source: www.pexels.com</h6>
       </div>
       <div class="featured-work">
