chore: add a new site

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Featured Work</h2>
 
         <div class="site-item">
-          <a href="#" target="blank">
+          <a href="https://cixs.github.io/The-Brighton-Times/. " target="blank">
             <img src="images/TheBrightonTimes.jpg" alt="The Brighton Times project">
           </a>
           <h2>THE BRIGHTON TIMES</h2>
@@ -55,7 +55,7 @@
           </h6>
         </div>
         <div class="site-item">
-          <a href="#" target="blank">
+          <a href="https://cixs.github.io/Pixel-Art-Maker/" target="blank">
             <img src="images/PixelArtMaker.jpg" alt="Lab:Pixel Art maker project">
           </a>
           <h2>PIXEL ART MAKER</h2>
@@ -65,7 +65,17 @@
         </div>
 
         <div class="site-item">
-          <a href="#">
+          <a href="https://cixs.github.io/Memory-Game-Master/">
+            <img src="images/MemoryGameMaster.jpg" alt="Memory Game Master">
+          </a>
+          <h2>MEMORY GAME</h2>
+          <h6>
+            <a href="https://github.com/cixs/Memory-Game-Master" target="blank">https://github.com/cixs/Memory-Game-Master</a>
+          </h6>
+        </div>
+
+        <div class="site-item">
+          <a href="https://cixs.github.io/My-Portfolio/">
             <img src="images/MyPortfolio.jpg" alt="My Portofolio project">
           </a>
           <h2>MY PORTFOLIO</h2>
