Change the projects list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>My portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat%7CRoboto%7CWork+Sans:100%7CBenchNine:100" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/app.css" />
 </head>
@@ -45,15 +45,7 @@
       <div class="featured-work">
         <h2>Featured Work</h2>
 
-        <div class="site-item">
-          <a href="https://cixs.github.io/The-Brighton-Times/. " target="blank">
-            <img src="images/TheBrightonTimes.jpg" alt="The Brighton Times project">
-          </a>
-          <h2>THE BRIGHTON TIMES</h2>
-          <h6>
-            <a href="https://github.com/cixs/The-Brighton-Times" target="blank">https://github.com/cixs/The-Brighton-Times</a>
-          </h6>
-        </div>
+
         <div class="site-item">
           <a href="https://cixs.github.io/Pixel-Art-Maker/" target="blank">
             <img src="images/PixelArtMaker.jpg" alt="Lab:Pixel Art maker project">
@@ -73,7 +65,15 @@
             <a href="https://github.com/cixs/Memory-Game-Master" target="blank">https://github.com/cixs/Memory-Game-Master</a>
           </h6>
         </div>
-
+        <div class="site-item">
+          <a href="https://cixs.github.io/Arcade-Game-Master/. " target="blank">
+            <img src="images/ArcadeGameMaster.jpg" alt="Arcade Game Master project">
+          </a>
+          <h2>MEMORY GAME MASTER</h2>
+          <h6>
+            <a href="https://github.com/cixs/Arcade-Game-Master" target="blank">https://github.com/cixs/Arcade-Game-Master</a>
+          </h6>
+        </div>
         <div class="site-item">
           <a href="https://cixs.github.io/My-Portfolio/">
             <img src="images/MyPortfolio.jpg" alt="My Portofolio project">
@@ -87,7 +87,8 @@
       </div>
     </div>
     <footer>
-      <p>Project developed as a part of Udacity's <strong>Front-End Web Developer Nanodegree Program</strong>.</p>
+      <p>Project developed as a part of Udacity's
+        <strong>Front-End Web Developer Nanodegree Program</strong>.</p>
     </footer>
   </main>
   <script src="js/app.js"></script>
