Changes in projects list

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a href="https://cixs.github.io/Arcade-Game-Master/. " target="blank">
             <img src="images/ArcadeGameMaster.jpg" alt="Arcade Game Master project">
           </a>
-          <h2>MEMORY GAME MASTER</h2>
+          <h2>ARCADE GAME</h2>
           <h6>
             <a href="https://github.com/cixs/Arcade-Game-Master" target="blank">https://github.com/cixs/Arcade-Game-Master</a>
           </h6>
