Add new items in project list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </a>
     <div>
       <h1>Cristinel Ilisei</h1>
-      <h3>Front-End Ninja</h3>
+      <h3>Front-End Web Developer</h3>
     </div>
 
   </div>
@@ -48,7 +48,7 @@
 
         <div class="site-item">
           <a href="https://cixs.github.io/Pixel-Art-Maker/" target="blank">
-            <img src="images/PixelArtMaker.jpg" alt="Lab:Pixel Art maker project">
+            <img src="images/pixel-art-maker.jpg" alt="Lab:Pixel Art maker project">
           </a>
           <h2>PIXEL ART MAKER</h2>
           <h6>
@@ -57,26 +57,68 @@
         </div>
 
         <div class="site-item">
-          <a href="https://cixs.github.io/Memory-Game-Master/">
-            <img src="images/MemoryGameMaster.jpg" alt="Memory Game Master">
+          <a href="https://cixs.github.io/Memory-Game-Master/" target="blank">
+            <img src="images/memory-game-master.jpg" alt="Memory Game Master">
           </a>
           <h2>MEMORY GAME</h2>
           <h6>
             <a href="https://github.com/cixs/Memory-Game-Master" target="blank">https://github.com/cixs/Memory-Game-Master</a>
           </h6>
         </div>
+
         <div class="site-item">
-          <a href="https://cixs.github.io/Arcade-Game-Master/. " target="blank">
-            <img src="images/ArcadeGameMaster.jpg" alt="Arcade Game Master project">
+          <a href="https://cixs.github.io/Arcade-Game-Master/" target="blank">
+            <img src="images/arcade-game-master.jpg" alt="Arcade Game Master project">
           </a>
           <h2>ARCADE GAME</h2>
           <h6>
             <a href="https://github.com/cixs/Arcade-Game-Master" target="blank">https://github.com/cixs/Arcade-Game-Master</a>
           </h6>
         </div>
+
+        <div class="site-item">
+          <a href="https://cixs.github.io/Restaurant-Review/" target="blank">
+            <img src="images/restaurant-reviews.jpg" alt="Restaurant-Reviews project">
+          </a>
+          <h2>RESTAURANT REVIEWS</h2>
+          <h6>
+            <a href="https://github.com/cixs/Restaurant-Review" target="blank">https://github.com/cixs/Restaurant-Review</a>
+          </h6>
+        </div>
+
+        <div class="site-item">
+          <a href="https://cixs.github.io/FeedReader-Jasmine-Test/" target="blank">
+            <img src="images/feedreader-jarmine-test.jpg" alt="FeedReader-Jasmine-Test project">
+          </a>
+          <h2>FEED READER (JASMINE TEST)</h2>
+          <h6>
+            <a href="https://github.com/cixs/FeedReader-Jasmine-Test/" target="blank">https://github.com/cixs/FeedReader-Jasmine-Test/</a>
+          </h6>
+        </div>
+
+        <div class="site-item">
+          <a href="https://github.com/cixs/My-Reads">
+            <img src="images/my-reads.jpg" alt="My Books project">
+          </a>
+          <h2>MY BOOKS</h2>
+          <h6>
+            <a href="https://github.com/cixs/My-Reads" target="blank">https://github.com/cixs/My-Reads</a>
+          </h6>
+        </div>
+        
+        <div class="site-item">
+          <a href="https://github.com/cixs/my-neighborhood">
+            <img src="images/my-neighborhood.jpg" alt="My Neighborhood project">
+          </a>
+          <h2>MY NEIGHBORHOOD</h2>
+          <h6>
+            <a href="https://github.com/cixs/my-neighborhood" target="blank">https://github.com/cixs/my-neighborhood</a>
+          </h6>
+        </div>
+
         <div class="site-item">
           <a href="https://cixs.github.io/My-Portfolio/">
-            <img src="images/MyPortfolio.jpg" alt="My Portofolio project">
+            <img src="images/my-portfolio.jpg" alt="My Portofolio project">
           </a>
           <h2>MY PORTFOLIO</h2>
           <h6>
